trip is composed of inspections; inspectionsa re a scheduled visit to a property -- still not glued to anything but just checking in the classes

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ InspectionScheduleIpad/build/*
 .#*
 InspectionScheduleIpad/build/
 *.cache
+InspectionScheduleIpad/InspectionScheduleIpad.xcodeproj/pcalcado.*
